# tarantool_rs

./: .travis.yml  Cargo.toml  README.md
bench/: bench.rs
examples/: async_example.rs  call.rs  call_16.rs  create_space.rs  data_mapping.rs  delete.rs  e2e_benchmark.rs  eval.rs  example.rs  insert.rs  insert_multiple_values.rs  read_length.rs  replace.rs  retrieve_id.rs  retrieve_space_id.rs  select.rs  update_common.rs  update_integer.rs  update_string.rs  upsert.rs
src/: action.rs  action_type.rs  async_client.rs  async_response.rs  async_tarantool.rs  auth.rs  call.rs  call_16.rs  client.rs  code.rs  codec.rs  common_operation.rs  delete.rs  eval.rs  greeting_packet.rs  greeting_packet_parameters.rs  header.rs  insert.rs  insertable.rs  integer_operation.rs  iterator_type.rs  lib.rs  operation.rs  proto.rs  protocol_parts.rs  replace.rs  request_type_key.rs  response.rs  select.rs  space.rs  state.rs  string_operation.rs  sync_client.rs  tarantool.rs  tarantool_client.rs  tarantool_codec.rs  tarantool_proto.rs  tarantool_validate.rs  update_common.rs  update_integer.rs  (+5 more)
tests/: benchmarks.rs  integration_sync.rs  lib.rs  tests.rs
