[package]
name = "tarantool"
version = "0.1.0"
authors = ["Galimov Arsen Gareginovich <loomaclin@yandex.ru>"]

[dependencies]
serde = "0.9.9"
rmp = "0.8.2"
rmp-serde = "0.12.2"
rmpv = { version = "0.2.0", features = ["with-serde"] }

base64 = "0.2.1"
sha1 = "0.2.0"
log = "0.3.6"
rmp-serialize = "0.8.0"
rustc-serialize = "0.3.22"
byteorder = "0.5.3"
hex-slice = "0.1.0"
derive_builder = "0.3.0"


[dev-dependencies]
env_logger = "0.3"